# kaggle-template

./: LICENSE  main.py  pyproject.toml
{{project_name}}/: README.md  pyproject.toml
