[project]
name = "kaggle-template"
version = "0.1.0"
description = "A template repository for quickly setting up Kaggle projects with Copier."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
